<resources>
    <string name="app_name">TubeAlarm</string>
    <string name="set_time">Set Alarm</string>
    <string name="day_monday">M</string>
    <string name="day_tuesday">T</string>
    <string name="day_wednesday">W</string>
    <string name="day_friday">F</string>
    <string name="day_saturday">S</string>
    <string name="day_sunday">S</string>
    <string name="title_activity_youtube">YoutubeActivity</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="playerview_text">This is a YouTubePlayerView!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="repeat_weekly">Repeat Weekly</string>
    <string name="add">Add</string>
    <string name="exit">Exit</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="settings">Settings</string>
    <string name="day_thursday">T</string>
    <string name="enabled">Enabled</string>
    <string name="vibrate">Vibrate</string>
    <string name="youtube_url">Enter YoutTube URL</string>
    <string name="message">Message</string>

    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="later">Later</string>
</resources>
