<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/alarm_fragment_clock_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TimePicker
            android:id="@+id/alarm_fragment_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- Days -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7">

                <ToggleButton
                    android:id="@+id/alarm_fragment_day_monday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="New ToggleButton"
                    android:textOff="@string/day_monday"
                    android:textOn="@string/day_monday" />

                <ToggleButton
                    android:id="@+id/alarm_fragment_day_tuesday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="New ToggleButton"
                    android:textOff="@string/day_tuesday"
                    android:textOn="@string/day_tuesday" />

                <ToggleButton
                    android:id="@+id/alarm_fragment_day_wednesday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="New ToggleButton"
                    android:textOff="@string/day_wednesday"
                    android:textOn="@string/day_wednesday" />

                <ToggleButton
                    android:id="@+id/alarm_fragment_day_thursday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="New ToggleButton"
                    android:textOff="@string/day_thursday"
                    android:textOn="@string/day_thursday" />

                <ToggleButton
                    android:id="@+id/alarm_fragment_day_friday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="New ToggleButton"
                    android:textOff="@string/day_friday"
                    android:textOn="@string/day_friday" />

                <ToggleButton
                    android:id="@+id/alarm_fragment_day_saturday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="New ToggleButton"
                    android:textOff="@string/day_saturday"
                    android:textOn="@string/day_saturday" />

                <ToggleButton
                    android:id="@+id/alarm_fragment_day_sunday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="New ToggleButton"
                    android:textColor="@android:color/holo_red_light"
                    android:textOff="@string/day_sunday"
                    android:textOn="@string/day_sunday" />
            </LinearLayout>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:orientation="horizontal">

                <!--<Switch-->
                <!--android:id="@+id/alarm_fragment_repeat_weekly"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/repeat_weekly" />-->

                <CheckBox
                    android:id="@+id/alarm_fragment_repeat_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_weekly" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <!-- OK and Cancel buttons -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/alarm_fragment_save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/alarm_fragment_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>

